--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -8,8 +8,54 @@
 
 \section{Exercise 2.1}
 \begin{enumerate}[label=(\alph*)]
-\item Yes, other solutions exist.
+\item Yes, other solutions exist. Consider $\ddot{y}(t) = - {\omega_0}^2
+  y(t)$. Then
+  \begin{alignat*}{2}
+    && D^2(y) + {\omega_0}^2 D^0(y) &= 0 \\
+    && (D^2 + {\omega_0}^2 D^0)(y) &= 0 \\
+    && (D^2 + {\omega_0}^2)(y) &= 0 \\
+    && (D + i \omega_0)(D - i \omega_0)(y) &= 0 \\
+    &\Rightarrow \quad & y = e^{-i \omega_0 t}\quad \textrm{and}\quad &y = e^{i
+      \omega_0 t} \\
+    &\Rightarrow \quad & y(t) = \sin(\omega_0 t)\, .
+  \end{alignat*}
+\item The initial displacement is $y(0) = \cos(\omega_0 \cdot 0) = 1$.
+\item STUB
 \end{enumerate}
+
+\section{Exercise 2.3}
+
+\begin{enumerate}[label=(\alph*)]
+\item \textit{Claim.} $\dot{\theta}_y(t) = \dot{\theta}_y(0) + {1 \over I_{yy}}
+  \int_0^t T_y(\tau)\, d\tau$ is linear with respect to $T_y$ if and only if
+  $\dot{\theta}_y(0) = 0$.
+  \begin{proof} Assume that $\dot{\theta}_y(0) = 0$. Then
+    \begin{align*}
+      \dot{\theta}_{ay_1 + by_2}(t)
+      &= {1 \over I_{yy}} \int_0^t T_{ay_1}(\tau) + T_{by_2}(\tau)\, d\tau \\
+      &= {1 \over I_{yy}} \left( \int_0^t T_{ay_1} (\tau)\, d\tau + \int_0^t
+        T_{by_2} (\tau)\, d\tau \right) \\
+      &= \dot{\theta}_{ay_1}(t) + \dot{\theta}_{by_2}(t)\, .
+    \end{align*}
+
+    Now
+  \end{proof}
+\item \textit{Claim.} The cascade of any two linear actors is linear.
+  \begin{proof}
+    Consider that actors are only a special class of functions, and that the
+    composition of linear functions is linear. Since to cascade actors is to
+    compose their functions, the cascade of any two linear actors is linear.
+  \end{proof}
+\item Consider system $S: X^2 \rightarrow Y$. $S$ is linear if it satisfies the
+  following:
+  $\forall\ x_1, x_2, x_3, x_4 \in X\ \textrm{and}\ \forall\ a,b,c,d \in
+  \mathbb{R},\ S(ax_1 + bx_2, cx_3 + dx_4) = acS(x_1, x_3) + adS(x_1, x_4) +
+  bcS(x_2, x_3) + bdS(x_2, x_4)$.
+\end{enumerate}
+
+\section{Exercise 7.1}
+
+
 
 \end{document}
 
