--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -3,6 +3,12 @@
 \title{Comp 462: Homework 1}
 \author{Anthony Brice}
 
+\usepackage{siunitx}
+\sisetup{
+  %math-rm=\mathsf,
+  %text-rm=\sffamily
+}
+
 \tikzstyle[scale] = [regular polygon, regular polygon sides=3, draw=black, ]
 
 \tikzset{
@@ -38,7 +44,8 @@
       by the parameter $i$.}
     \centering
     \begin{tikzpicture}[node distance=12em,>=triangle 90, thick, ->]
-      \node (a) [scaler, label={[label distance=0.65em]\sffamily \small Scale}] {$\omega_0$};
+      \node (a) [scaler, label={[label distance=0.65em]\sffamily \small Scale}]
+      {$\omega_0$};
       \node (b) [cosiner, right of=a, label={\sffamily \small Cosiner}] {$\cos{}
         \quad i$};
       \node (a-left) [coordinate,left of=a] {};
@@ -57,42 +64,75 @@
 
 \begin{enumerate}[label= (\alph*)]
 \item \textit{Claim.}
-  $\dot{\theta}_y(t) = \dot{\theta}_y(0) + {1 \over I_{yy}} \int_0^t T_y(\tau)\,
-  d\tau$ is linear if and only if $\dot{\theta}_y(0) = 0$.
+  System $S(T_y) = \dot{\theta}_y(t) = \dot{\theta}_y(0) + {1 \over I_{yy}} \int_0^t
+  T_y(\tau)\, d\tau$ is linear if and only if $\dot{\theta}_y(0) = 0$.
 
-  STUB
-  % \begin{proof} Assume that $\dot{\theta}_y(0) = 0$. Then
-  %   \begin{align*}
-  %     \dot{\theta}_{ay_1 + by_2}(t)
-  %     &= {1 \over I_{yy}} \int_0^t T_{ay_1}(\tau) + T_{by_2}(\tau)\, d\tau \\
-  %     &= {1 \over I_{yy}} \left( \int_0^t T_{ay_1} (\tau)\, d\tau + \int_0^t
-  %       T_{by_2} (\tau)\, d\tau \right) \\
-  %     &= \dot{\theta}_{ay_1}(t) + \dot{\theta}_{by_2}(t)\, .
-  %   \end{align*}
+  \begin{proof}
+    Assume $\dot{\theta}_y(0) = 0$. Then
+    \begin{align*}
+      S(aT_{y1} + bT_{y2}) = \dot{\theta}_y(t)
+      &= {1 \over I_{yy}} \int_0^t a T_{y1}(\tau) + b T_{y2}(\tau)\, d\tau \\
+      &= {a \over I_{yy}} \int_0^t T_{y1}(\tau)\, d\tau + {b \over I_{yy}}
+        \int_0^t T_{y2}(\tau)\, d\tau \\
+      &= a S(T_{y1}) + b S(T_{y2})\, .
+    \end{align*}
+    Then if $\dot{\theta}_y(0) = 0$, $S(T_y)$ is linear.
 
-  %   Now
-  % \end{proof}
+    Now assume $S(T_y)$ is linear and for purposes of contradiction that
+    $\dot{\theta}_y(0) = C \neq 0$. Then
+    \begin{align*}
+      S(aT_{y1} + bT_{y2}) = \dot{\theta}_y(t)
+      &= C + {1 \over I_{yy}} \int_0^t a T_{y1}(\tau) + b T_{y2}(\tau)\, d\tau
+      \\
+      &= C + {a \over I_{yy}} \int_0^t T_{y1}(\tau)\, d\tau + {b \over I_{yy}}
+        \int_0^t T_{y2}(\tau)\, d\tau \\
+      &\neq 2C + {a \over I_{yy}} \int_0^t T_{y1}(\tau)\, d\tau + {b \over I_{yy}}
+        \int_0^t T_{y2}(\tau)\, d\tau \\
+      &= a S(T_{y1}) + b S(T_{y2})\, .
+    \end{align*}
+    Clearly we have a contradiction. Then $S(T_y)$ is linear only if
+    $\dot{\theta}_y(0) = 0$.
+  \end{proof}
 \item \textit{Claim.} The cascade of any two linear actors is linear.
   \begin{proof}
     Consider that actors are only a special class of functions, and that the
     composition of linear functions is linear. Since to cascade actors is to
     compose their functions, the cascade of any two linear actors is linear.
   \end{proof}
-\item Consider system $S\colon X^2 \rightarrow Y$. Augmenting for linearity
-  yields
-  \begin{align*}
-    S(ax_1 + bx_2, cx_3 + dx_4)
-    &= S(ax_1,cx_3 + dx_4) + S(bx_2,cx_3 + dx_4) \\
-    &= S(ax_1,cx_3) + S(ax_1,dx_4) + S(bx_2,cx_3) + S(bx_2,dx_4) \\
-    &= acS(x_1, x_3) + adS(x_1, x_4) + bcS(x_2, x_3) + bdS(x_2, x_4)\, .
-  \end{align*}
+\item Augmenting the definition of superposition such that it applies to actors
+  of two input signals and one output signal yields
+  $S(ax_{i1} + bx_{i2}, ax_{j1} + bx_{j2}) = aS(x_{i1},x_{j1}) +
+  bS(x_{i2},x_{j2})$.
 
-  STUB
+  \textit{Claim.} System $S(x_i,x_j) = y(t) = x_i(t) + x_j(t)$ is linear.
+
+  \begin{proof}
+    \begin{align*}
+      S(ax_{i1} + bx_{i2}, ax_{j1} + bx_{j2})
+      &= ax_{i1} + bx_{i2} + ax_{j1} + bx_{j2} \\
+      &= a(x_{i1} + x_{j1}) + b(x_{i2} + x_{j2}) \\
+      &= aS(x_{i1},x_{j1}) + bS(x_{i2},x_{j2})\, .
+    \end{align*}
+  \end{proof}
 \end{enumerate}
 
 \section{Exercise 2.5}
 
-STUB
+\begin{enumerate}[label= (\alph*)]
+\item $\theta(t) = \theta(0) + \int_0^t \dot{\theta}(\tau)\, d\tau$.
+\item No, the system is unstable. Let input $\dot{\theta}$ be the unit step;
+  then the input is bounded, but the output is unbounded.
+\item
+  \begin{align*}
+    \theta(t)
+    &= \int_0^t \dot\theta (\tau)\, d\tau \\
+    &= K \int_0^t \psi(\tau) - \theta(\tau)\, d\tau \\
+    &= K \int_0^t a\, d\tau - K \int_0^t \theta(\tau)\, d\tau \\
+    &= Kat - K \int_0^t \theta(\tau)\, d\tau \\
+    &= au(t)(1 - e^{-Kt})\, .
+  \end{align*}
+  At $t = 0$, $\theta(0) = 0$. As $t$ gets large, $\theta$ approaches $a$.
+\end{enumerate}
 
 \section{Exercise 7.1}
 
@@ -114,7 +154,16 @@ is affine.
 \section{Exercise 7.2}
 
 \begin{enumerate}[label= (\alph*)]
-\item
+\item The sound pressure of the loudest sound is given by $H$ in
+  \begin{equation*}
+    \SI{100}{\decibel} = 20 \log_{10}\left( {H \over \SI{20}{\micro\pascal}}
+    \right).
+  \end{equation*}
+  Thus $H = \SI{2}{\pascal}$.
+\item If the maximum pressure is \SI{2}{\pascal} and the smallest difference is
+  \SI{20}{\micro\pascal}, then $\SI{2}{\pascal} / \SI{20}{\micro\pascal} =
+  \SI{100000}{}$ is the largest number we need to encode in binary. Thus we need
+  at least $17$ bits.
 \end{enumerate}
 
 \end{document}
